Fix issue where dashboard items dont work on mobile

--- a/angular-src/src/app/components/dashboard/dashboard.component.css
+++ b/angular-src/src/app/components/dashboard/dashboard.component.css
@@ -15,3 +15,11 @@
   background-color: white !important;
   border: 2px solid #f5f5f5;
 }
+
+.storeButton {
+  color: blue;
+}
+
+.storeButton:hover{
+    text-decoration: underline;
+}
